"""HTM Cell: defines the Cell class used in Hierarchical Temporal Memory (HTM).

In HTM Temporal Memory (TM), each column contains multiple cells. A cell
represents a contextual state of the column's feature. Distal synaptic
connections on a cell are grouped into "segments" that learn and represent
temporal transitions (i.e., which contexts are likely to follow others).

Key HTM concepts relevant to this file:
- Column: A set of cells that share the same feed-forward feature; multiple
  cells allow disambiguating sequences by context.
- Cell: A unit that can become active and/or predictive based on learned
  temporal context captured by its distal segments.
- Distal Segment: A cluster of synapses connecting to other cells active in
  the recent past; when enough synapses are active, the segment becomes active,
  making the owning cell predictive for the next timestep.
- Temporal Memory (TM): The algorithm that updates cells and segments based on
  sequences; it strengthens synapses for correct predictions and grows new
  segments/synapses when novel transitions are observed.
"""

# htm_core/cell.py
from __future__ import annotations

from typing import TYPE_CHECKING

if TYPE_CHECKING:
    from psu_capstone.agent_layer.legacy_htm.segment import Segment


class Cell:
    """Single cell within a column in HTM Temporal Memory.

    A Cell holds zero or more distal segments. Each segment aggregates synapses
    to other cells that were recently active, encoding temporal context. When
    a segment becomes active (enough of its synapses are connected to currently
    active cells), the cell enters a predictive state, indicating that this cell
    expects to be active in the next timestep given the current context.

    Responsibilities:
    - Maintain a list of distal segments (`segments`).
    - Provide a simple identity for tracing/debugging.
    - Be manipulated externally by the Temporal Memory algorithm (creation,
      growth, pruning, and learning occur in segments, not here).

    The Temporal Memory procedure will create segments in response to novel
    transitions, grow/prune synapses on segments to reinforce correct
    predictions, and use segment activity to set the cell into a predictive state.

    Notes:
        This class intentionally remains lightweight: TM logic resides in higher
        layers and in Segment/Synapse structures. The number of cells per column
        (often 32) controls sequence capacity: more cells allow richer contextual
        differentiation.
    """

    def __init__(self) -> None:
        # Filled by Temporal Memory: list of Segment objects
        self._segments: list["Segment"] = []

    def __repr__(self) -> str:
        """Represent the Cell by its unique identity for debugging/tracing."""
        return f"Cell(id={id(self)})"


if __name__ == "__main__":
    cell = Cell()
    assert isinstance(cell, Cell)
